# macos_gadgets

./: Cargo.toml  README.md
gadgets/appgen/: Cargo.toml  README.md
gadgets/appgen/completions/: README.md  _appgen  appgen.bash  appgen.fish
gadgets/appgen/scripts/: icnsgen  launchgen
gadgets/appgen/src/: log_example.rs  main.rs
gadgets/forward_url_proxy/: Cargo.toml
gadgets/forward_url_proxy/src/: main.rs
gadgets/input_method_switch/: Cargo.toml  README.md
gadgets/input_method_switch/src/: main.rs
gadgets/launchit/: Cargo.toml  README.md  build_prompt.txt
gadgets/launchit/src/: main.rs
gadgets/launchit/src/app/: mod.rs  path_utils.rs  state.rs
gadgets/launchit/src/launchctl/: mod.rs
gadgets/launchit/src/ui/: mod.rs
gadgets/watch_downloads/: Cargo.toml  README.md
gadgets/watch_downloads/src/: copy.rs  lib.rs  main.rs  result.rs
