[package]
name = "forward_url_proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
axum = "0.8.4"
chrono = "0.4.42"
clap = { version = "4.5.47", features = ["derive"] }
env_logger = "0.11.8"
reqwest = "0.12.23"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tracing = "0.1.41"
url = "2.5.7"
urlencoding = "2.1.3"
