[package]
name = "launchit"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
ratatui = "0.26.1"
crossterm = "0.27.0"
anyhow = "1.0.80"
plist = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4"] }
dirs = "5.0.1"
libc = "0.2.152"
fuzzy-matcher = "0.3.7"
glob = "0.3.1"
tui-textarea = "0.7.0"
